--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marvel Personajes</title>
-    <meta name="description" content="Api Generador de avatares">
+    <meta name="description" content="Personajes de Marvel by Holman Morales">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
